welcome.lessons.welcome.array.search.IndexOfValue.scala.error
indexOfValue:2: error: not found: value i
  while (nums(i)!=lookingFor & i<=nums.length){
              ^indexOfValue:2: error: not found: value i
  while (nums(i)!=lookingFor & i<=nums.length){
                               ^indexOfValue:3: error: not found: value i
    i=i+1
    ^indexOfValue:5: error: not found: value i
  if (nums(i)==lookingFor){
           ^indexOfValue:6: error: not found: value i
    return i
           ^