welcome.lessons.welcome.array.search.IndexOfValue.scala.code
def indexOfValue(nums:Array[Int] ,lookingFor:Int): Int = {
  while (nums(i)!=lookingFor & i<=nums.length){
    i=i+1
  }
  if (nums(i)==lookingFor){
    return i
  } else return -1
}